tests/invalid/set_comparison_ordering/main.py
def run_case() -> None:
    a: set[int] = {1, 2}
    b: set[int] = {2, 3}
    bad: bool = a < b


if __name__ == "__main__":
    run_case()
